<resources>
    <string name="app_name">EatLah</string>

    <!-- Strings related to login -->
    <string name="login_page_title">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_hawkercentreid">Hawker Centre ID</string>
    <string name="prompt_hawkerid">Hawker Stall ID</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_profile">Profile</string>
    <string-array name="profiles">
        <item>Customer</item>
        <item>Courier</item>
        <item>Hawker</item>
    </string-array>

    <!-- Strings related to signup -->
    <string name="prompt_sign_up">Don\'t have an account? Sign up now!</string>
    <string name="action_sign_up">Sign up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="customer_address">Customer\'s Home Address</string>
    <string name="customer_address_empty">Empty Address Field</string>
    <string name="customer_address_invalid">Invalid Address</string>

    <string name="signout_action">Sign Out</string>

    <!-- CUSTOMER -->
    <!-- Strings related to customer homepage -->
    <string name="title_activity_customer_homepage">Customer Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="fab_tooltip">Done ordering? Click on me to checkout!</string>

    <!-- Strings related to database references -->
    <string name="user_ref">users</string>
    <string name="hawker_centre_ref">HawkerCentres</string>
    <string name="hawker_stall_ref">HawkerStalls</string>
    <string name="food_item_ref">FoodItems</string>
    <string name="order_ref">Orders</string>

    <!-- Strings related to hawker stalls fragment -->
    <string name="stall_number">Stall Number %1$s</string>

    <!-- Strings related to food item fragment -->
    <string name="food_item_qty">Enter quantity</string>

    <!-- Strings related to menu of foodItems -->
    <string name="food_item_price">$ %1$s</string>
    <string name="add_to_cart">Add to cart</string>

    <!-- Strings related to orderView -->
    <string name="order_submit_button">Submit Order</string>
    <string name="order_cancel_button">Cancel Order</string>
    <string-array name="deliveryOptions">
        <item>Self-collection</item>
        <item>Delivery</item>
    </string-array>
    <string name="collectionTime">Collection / Delivery Time</string>

    <string name="collectedOrder_helper">Received Order? Show this receipt to the courier to mark order as complete!</string>

    <!-- COURIER -->
    <!-- Strings related to CourierHomepage -->
    <string name="ordersView">View All Orders</string>
    <string name="pastOrdersView">View Past Orders</string>
    <string name="profilePageView">Profile</string>
    <string name="courierContactView">Contact Customer</string>

    <!-- tags -->
    <string name="courierPendingOrderFrag">CourierPendingOrderFragment</string>
    <string name="courierFoodItemsFrag">CourierOrderItemsFragment</string>

    <!-- Strings related to pendingOrderView -->
    <string name="viewOrders">View Orders</string>
    <string name="attendToOrder">Attend to Order</string>
    <string name="pendingOrders">Pending Orders</string>
    <string name="collectedOrder">Collected Order</string>

    <!-- Strings related to mapView -->
    <string name="requestingLocationServices">is_requesting_updates</string>
    <string name="lastKnownLocation">last_known_location</string>
    <string name="currentLocation">Current Location</string>
    <string name="endRouteLabel">End Route</string>

    <!-- Strings related to db ref -->
    <string name="collectionTimeRef">collectionTime</string>
    <string name="fcmTokenRef">fcmTokens</string>
    <string name="messagesRef">Messages</string>
    <string name="notificationRequests">notificationRequests</string>
    <string name="user_id">uid</string>
    <string name="message_body">messageBody</string>
    <string name="message_title">messageTitle</string>
    <string name="is_background">is_background</string>
    <string name="timestamp">timestamp</string>

    <!-- Strings related to courierReceiptFragment -->
    <string name="completedOrder">Completed Order</string>
    <string name="amountToCollect">Subtotal</string>

    <!-- Strings related to fragment tags -->
    <string name="foodItemFrag">FoodItemFragment</string>
    <string name="hawkerStallFrag">HawkerStallFragment</string>
    <string name="hawkerCentreFrag">HawkerCentreFragment</string>
    <string name="acceptedOrderItemFrag">AcceptedOrderItemFragment</string>
    <string name="completedOrderItemFrag">CompletedOrderItemFragment</string>
    <string name="modifyMenuItemFrag">ModifyMenuItemFragment</string>
    <string name="orderFrag">OrderFragment</string>
    <string name="profileFrag">ProfileFragment</string>
    <string name="title_activity_hawker_homepage">HawkerHomepage</string>
    <string name="title_activity_courier_homepage">Courier Homepage</string>
    <string name="title_activity_courier_maps">Map</string>
    <string name="courierOrderItemsDialogFrag">courierOrderItemsDialogFragment</string>
    <string name="courier_receipt_fragment">courierReceiptFragment</string>
    <string name="pastOrdersFragment">pastOrdersFragment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deliveredOrder_helper">Delivered Order? Scan QR code on customer\'s receipt to mark order as complete.</string>
    <string name="toDisplayReceiptView">boolean for receipt view to be displayed</string>
    <string name="scanQR">Scan QR Code</string>


    <!-- Hawker -->
    <!-- Strings related to hawker homepage -->
    <string name="hawker_nav_header_subtitle">Stall Owner View</string>
    <string name="hawker_modify_menu_title">Modify Menu Item</string>
    <!-- Strings for argument purposes -->
    <string name="NEW_ITEM">NEW_ITEM</string>


    <!-- General -->
    <string name="profilePageTitle">Profile Settings</string>
    <string name="name">Name</string>
    <string name="updateDetails">Update</string>
    <string name="forgotPassword">Forgot Password? Click here to reset.</string>
    <string name="title_activity_notifications_view">NotificationsViewActivity</string>
    <string name="promptText_profile">To update profile settings, fill in only the relevant fields.</string>
    <string name="title_activity_qrcode_decoder">QRCodeDecoderActivity</string>

</resources>
