<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="352dp"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="275dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signup_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="44sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor='@color/textColor'
                    android:textColorHint='@color/textColor' />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone_editText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"
                    android:ems="10"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/profile_spinner"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/edittext"
                android:entries="@array/profiles"
                android:paddingBottom="10dp"
                android:paddingTop="20dp"
                android:textColorHint="@color/textColor" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:ellipsize="end"
                android:text="@string/action_sign_up"
                android:textColor="@color/login_btn_textColor" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>