<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.General.LoginActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="275dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="44sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor='@color/textColor'
                    android:textColorHint='@color/textColor' />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/profile_spinner"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"
                    android:entries="@array/profiles"
                    android:paddingBottom="10dp"
                    android:paddingTop="20dp"
                    android:textColorHint="@color/textColor"
                    app:layout_constraintBottom_toTopOf="@+id/email_sign_in_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="0dp"
                    android:layout_height="47dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:ellipsize="end"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/login_btn_textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_spinner" />

                <TextView
                    android:id="@+id/resetPassword_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="124dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="124dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:padding="1dp"
                    android:text="@string/forgotPassword"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_sign_in_button"
                    app:layout_constraintVertical_bias="0.1" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:baselineAligned="true">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/signup_fab"
                    android:layout_width="74dp"
                    android:layout_height="62dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:foregroundGravity="bottom|right"
                    android:tint="@android:color/transparent"
                    app:backgroundTint="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:rippleColor="@android:color/transparent"
                    app:srcCompat="@drawable/signup" />

                <TextView
                    android:id="@+id/signup_textView"
                    android:layout_width="243dp"
                    android:layout_height="28dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/prompt_sign_up"
                    android:textColor="@color/textColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/signup_fab" />
            </android.support.constraint.ConstraintLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>